<resources>
    <string name="app_name_release">Trainer App</string>
    <string name="app_name_debug">[Debug] Trainer App</string>

    <!-- Activity/Fragment titles -->
    <string name="title_next_workout">Next Workout</string>
    <string name="title_upcoming_workouts">Upcoming Workouts</string>
    <string name="title_history">History</string>
    <string name="title_workout_details">Workout Details</string>
    <string name="title_show_workout_log">Workout Log</string>
    <string name="title_create_workout_log">Create Workout Log</string>




    <!-- Commons -->
    <string name="workout_day">Day %1x</string>


    <!-- Next Workout -->
    <string name="no_next_workout">No upcoming workouts.\nSwipe down to download workouts.</string>
    <string name="exercises_label">Exercises</string>
    <string name="sets_label">Sets</string>
    <string name="reps_label">Reps</string>
    <string name="skip_button">Skip</string>
    <string name="done_button">Done</string>

    <!-- Workouts -->
    <string name="no_upcoming_workouts">No upcoming workouts.</string>


    <!-- History -->
    <string name="no_past_workouts">No past workouts.</string>
    <string name="done_label">Done</string>
    <string name="skipped_label">Skipped</string>
    <string name="past_workouts">Past workouts</string>


    <!-- Workout Log -->
    <string name="save">Save</string>
    <string name="workout_skipped">Workout Skipped.</string>


    <!-- Exercise Log Adapter -->
    <string name="set_number">Set %1$d</string>


    <string name="item_set_log_reps">Reps</string>
    <string name="item_set_log_weight">Weight</string>
</resources>