<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.nextworkout.NextWorkoutFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nextWorkout_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/workoutName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGray"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Upper body 1" />

                <TextView
                    android:id="@+id/day_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/workoutName_textView"
                    app:layout_constraintStart_toStartOf="@+id/workoutName_textView"
                    app:layout_constraintTop_toBottomOf="@+id/workoutName_textView"
                    tools:text="Day 3" />

                <TextView
                    android:id="@+id/exercises_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/sets_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/day_textView"
                    tools:text="3" />

                <TextView
                    android:id="@+id/sets_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/reps_textView"
                    app:layout_constraintStart_toEndOf="@+id/exercises_textView"
                    app:layout_constraintTop_toTopOf="@+id/exercises_textView"
                    tools:text="12" />

                <TextView
                    android:id="@+id/reps_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sets_textView"
                    app:layout_constraintTop_toTopOf="@+id/sets_textView"
                    tools:text="90" />

                <TextView

                    android:id="@+id/exercises_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/exercises_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/exercises_textView"
                    app:layout_constraintStart_toStartOf="@+id/exercises_textView"
                    app:layout_constraintTop_toBottomOf="@+id/exercises_textView" />

                <TextView
                    android:id="@+id/sets_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sets_label"
                    app:layout_constraintEnd_toEndOf="@+id/sets_textView"
                    app:layout_constraintStart_toStartOf="@+id/sets_textView"
                    app:layout_constraintTop_toBottomOf="@+id/sets_textView" />

                <TextView
                    android:id="@+id/reps_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/reps_label"
                    app:layout_constraintEnd_toEndOf="@+id/reps_textView"
                    app:layout_constraintStart_toStartOf="@+id/reps_textView"
                    app:layout_constraintTop_toBottomOf="@+id/reps_textView" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/mediumGray"
                    app:layout_constraintBottom_toBottomOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exercises_recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:clipToPadding="false"
                android:paddingBottom="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_layout"
                tools:listitem="@layout/exercise_row_item" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:text="@string/done_button"
                app:icon="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/skip_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/skip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/skip_button"
                app:icon="@drawable/ic_skipped"
                app:layout_constraintBottom_toBottomOf="@+id/done_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/done_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/noWorkout_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_next_workout"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
